--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+h1 {
+  font-family: "Permanent Marker", Roboto, sans-serif;
+  font-size: 40px !important;
+  line-height: 52px !important;
+}
+
 .App {
   display: flex;
   flex-direction: column;
