--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body {
   background: var(--rp-base);
   color: var(--rp-text);
   font-family: Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif;
+  margin: 0 auto;
+  max-width: 900px;
 }
 
 a, a:active, a:visited {
